feat: 远程菜单列表

--- a/web/src/assets/style/base.less
+++ b/web/src/assets/style/base.less
@@ -7,3 +7,15 @@
 li {
     list-style: none;
 }
+
+.button-link {
+    user-select: none;
+    position: relative;
+    text-decoration: none;
+    color: inherit;
+
+    &:hover {
+        text-decoration: underline;
+        color: #68a7ff;
+    }
+}
