--- a/web/src/assets/style/base.less
+++ b/web/src/assets/style/base.less
@@ -8,6 +8,12 @@ li {
     list-style: none;
 }
 
+.main {
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
 .button-link {
     user-select: none;
     position: relative;
